--- a/sections/meet-team.liquid
+++ b/sections/meet-team.liquid
@@ -401,6 +401,8 @@
           <img src="{{ team_image | img_url: '1200x800' }}" 
                alt="{{ heading | escape }}"
                class="meet-team-image"
+               width="1200"
+               height="800"
                loading="lazy"
                style="width: 100%;
                       height: auto;
