--- a/snippets/header-content.liquid
+++ b/snippets/header-content.liquid
@@ -152,7 +152,12 @@
                    padding: {{ mobile_menu_padding }}px;
                    width: {{ mobile_menu_icon_size | plus: mobile_menu_padding | times: 2 }}px;
                    height: {{ mobile_menu_icon_size | plus: mobile_menu_padding | times: 2 }}px;">
-      <span class="navbar-toggler-icon" style="background-image: url(\"data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='{{ mobile_menu_icon_color | url_encode }}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='{{ mobile_menu_stroke_width }}' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e\"); width: {{ mobile_menu_icon_size }}px; height: {{ mobile_menu_icon_size }}px; background-size: {{ mobile_menu_icon_size }}px {{ mobile_menu_icon_size }}px;"></span>
+      {%- liquid
+        assign svg_color = mobile_menu_icon_color | url_encode
+        assign svg_stroke = mobile_menu_stroke_width
+        assign svg_data = 'data:image/svg+xml,%3csvg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 30 30\'%3e%3cpath stroke=\'' | append: svg_color | append: '\' stroke-linecap=\'round\' stroke-miterlimit=\'10\' stroke-width=\'' | append: svg_stroke | append: '\' d=\'M4 7h22M4 15h22M4 23h22\'/%3e%3c/svg%3e'
+      -%}
+      <span class="navbar-toggler-icon" style="background-image: url('{{ svg_data }}'); width: {{ mobile_menu_icon_size }}px; height: {{ mobile_menu_icon_size }}px; background-size: {{ mobile_menu_icon_size }}px {{ mobile_menu_icon_size }}px;"></span>
     </button>
     {% endif %}
     <div class="collapse navbar-collapse" id="navbarNav">
