--- a/snippets/two-columns-content.liquid
+++ b/snippets/two-columns-content.liquid
@@ -98,6 +98,8 @@
         <img src="{{ image | img_url: '1200x1200' }}" 
              alt="{{ image_alt | escape }}"
              class="two-column-image"
+             width="1200"
+             height="1200"
              style="width: 100%;
                     height: 100%;
                     object-fit: {{ image_fit }};
