Fix footer URL setting: remove invalid default value

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -18,8 +18,7 @@
     {
       "type": "url",
       "id": "instagram_url",
-      "label": "Instagram URL",
-      "default": "https://instagram.com"
+      "label": "Instagram URL"
     },
     {
       "type": "header",
