--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -2,7 +2,7 @@
   <div class="container">
     <a class="navbar-brand" href="{{ routes.root_url }}">
       {% if settings.logo_image %}
-        <img src="{{ settings.logo_image | img_url: '200x' }}" alt="{{ shop.name }}" class="logo-image" width="200" height="60">
+        <img src="{{ settings.logo_image | image_url: width: 200 }}" alt="{{ shop.name }}" class="logo-image" width="200" height="60">
       {% else %}
         {{ settings.logo_text | default: shop.name }}
       {% endif %}
