--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -8,6 +8,7 @@
   {{ content_for_header }}
   
   <!-- Google Fonts -->
+  {% comment %} theme-check-disable RemoteAsset {% endcomment %}
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -15,6 +16,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  {% comment %} theme-check-enable RemoteAsset {% endcomment %}
   <!-- Theme CSS -->
   {{ 'theme.css' | asset_url | stylesheet_tag }}
   
@@ -37,7 +39,9 @@
   {% section 'footer' %}
 
   <!-- Bootstrap 5 JS -->
+  {% comment %} theme-check-disable RemoteAsset {% endcomment %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+  {% comment %} theme-check-enable RemoteAsset {% endcomment %}
   <!-- Theme JS -->
   <script src="{{ 'theme.js' | asset_url }}" defer></script>
 </body>
